--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -14,6 +14,7 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.25.0",
+		"@resvg/resvg-js": "^2.1.0",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
@@ -24,6 +25,8 @@
 		"mdsvex": "^0.10.6",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
+		"satori": "^0.0.43",
+		"satori-html": "^0.3.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.7",
@@ -31,5 +34,8 @@
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-seo": "^1.4.1"
+	}
 }
